@startuml
title Class Diagram: CarConnect System

class User {
  +int userId
  +String name
  +String phone
  +String passwordHash
  +float averageRating
  +register()
  +login()
  +updateProfile()
  +switchRole()
}

class Ride {
  +int rideId
  +String source
  +String destination
  +datetime departureTime
  +int availableSeats
  +float pricePerSeat
  +String status
  +createRide()
  +updateDetails()
  +cancelRide()
}

class Booking {
  +int bookingId
  +int seatsBooked
  +float totalAmount
  +String status
  +createBooking()
  +confirmBooking()
  +cancelBooking()
}

class Payment {
  +int paymentId
  +float amount
  +String status
  +datetime timestamp
  +processPayment()
  +verifyPayment()
}

class Rating {
  +int ratingId
  +int ratingValue
  +String comment
  +submitRating()
}

' Relationships

User "1" -- "0..*" Ride : offers >
User "1" -- "0..*" Booking : makes >
Ride "1" -- "0..*" Booking : has >

User "1" -- "0..*" Payment : makes >

User "1" -- "0..*" Rating : gives/receives >
Ride "1" -- "0..*" Rating : is rated >

@enduml
